docs(clio): complete rebuild of CLIO instructions for web application
Problem: CLIO instructions were minimal and missing critical sections for TypeScript/React development
Solution: Complete rebuild with Unbroken Method, TypeScript strict typing requirements, React functional component patterns, WebSocket management, API integration standards, accessibility requirements
Testing: Verified all sections present, web-specific requirements comprehensive, testing checklist complete

--- a/.gitignore
+++ b/.gitignore
@@ -51,11 +51,13 @@ venv/
 # Node
 node_modules/
 
-# Agent session handoffs (development only, not for public release)
+# CLIO AI Assistant
 ai-assisted/20*/
-
-# Scratch directory (development work, not for release)
 scratch/
+.clio/logs/
+.clio/sessions/
+.clio/memory/
+.clio/*.json
 
 # Temp directory (testing artifacts)
 temp/
@@ -70,3 +72,4 @@ temp/
 release-notes/
 
 reference/
+
